Bug 1287126 - restore removal of space stuffing removed in changeset 99eb42a1fd3d. r=mkmelin